--- a/user_reg_proj_root/templates/userapp/about.html
+++ b/user_reg_proj_root/templates/userapp/about.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
   <link rel="stylesheet" href="{% static 'style_new.css' %}">
 
-  <title>Luminar|About</title>
+  <title>Naveen|About</title>
 </head>
 
 <body>
