--- a/user_reg_proj_root/templates/courseapp/course_details.html
+++ b/user_reg_proj_root/templates/courseapp/course_details.html
@@ -4,68 +4,68 @@
 {% block content %}
 
 
-    {% if each_one %}
+{% if each_one %}
 
-    <div class="container">
-        <div class="row mb-5 fields mt-5">
-    <div class="col-md-6">
-
-
-<!--        breadcrumb -->
-    <section id="bc">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="{% url 'home' %}">Admin Home</a>
-                </li>
-                <li class="breadcrumb-item">
-                    <a href="{% url 'course_list' %}">Courses</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                    {{each_one.name}}
-                </li>
-            </ol>
+<div class="container">
+    <div class="row mb-5 fields mt-5">
+        <div class="col-md-6">
 
 
-        </nav>
-    </section>
-          <ul class="list-group list-group-flush mt-5">
-        <h3 class="text-info">Course Info</h3>
+            <!--        breadcrumb -->
+            <section id="bc">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="{% url 'home' %}">Admin Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="{% url 'course_list' %}">Courses</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">
+                            {{each_one.name}}
+                        </li>
+                    </ol>
+
+
+                </nav>
+            </section>
+            <ul class="list-group list-group-flush mt-5">
+                <h3 class="text-info">Course Info</h3>
                 <li class="list-group-item text-secondary">
-                   Course Code:
-                  <span class="float-right">{{each_one.code}}</span>
-                </li>
-                <li class="list-group-item text-secondary">
-                   Course Name:
-                  <span class="float-right">{{each_one.name}}</span>
+                    Course Code:
+                    <span class="float-right">{{each_one.code}}</span>
                 </li>
                 <li class="list-group-item text-secondary">
-                   Duration:
-                  <span class="float-right">{{each_one.duration}}</span>
+                    Course Name:
+                    <span class="float-right">{{each_one.name}}</span>
                 </li>
                 <li class="list-group-item text-secondary">
-                   Fees:
-                  <span class="float-right">{{each_one.fees|intcomma}}
-                  </span>
+                    Duration:
+                    <span class="float-right">{{each_one.duration}}</span>
                 </li>
                 <li class="list-group-item text-secondary">
-                   Trainer:
-
-                  <span class="float-right">{{each_one.trainer}}
-                  </span>
+                    Credits:
+                    <span class="float-right">{{each_one.credits|intcomma}}
+                    </span>
                 </li>
-              </ul>
+                <li class="list-group-item text-secondary">
+                    Trainer:
 
-        <div class="pt-4">
-        <a href="{% url 'course_edit' each_one.id %}" class="btn btn-secondary float-left px-4">Update</a>
-        <a href="{% url 'course_delete' each_one.id %}" class="btn btn-danger float-right px-4">Delete</a>
+                    <span class="float-right">{{each_one.trainer}}
+                    </span>
+                </li>
+            </ul>
+
+            <div class="pt-4">
+                <a href="{% url 'course_edit' each_one.id %}" class="btn btn-secondary float-left px-4">Update</a>
+                <a href="{% url 'course_delete' each_one.id %}" class="btn btn-danger float-right px-4">Delete</a>
             </div>
+        </div>
     </div>
 </div>
-    </div>
 
 
-    {% endif %}
+{% endif %}
 
 
 
