--- a/user_reg_proj_root/templates/userapp/contact.html
+++ b/user_reg_proj_root/templates/userapp/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'style_new.css' %}">
-  <title>Luminar|Contact</title>
+  <title>Naveen|Contact</title>
 </head>
 
 <body>
@@ -47,9 +47,9 @@
               <h4>Address</h4>
               <p>3rd Floor, Vallamattam Estate Seaport - Airport Rd CSEZ P O, Kakkanad</p>
               <h4>Email</h4>
-              <p>contact@luminartechnolab.com</p>
+              <p>contact@naveen.com</p>
               <h4>Phone</h4>
-              <p>+91 8086 651 651</p>
+              <p>+1 347-241-6715</p>
             </div>
           </div>
         </div>
