changes to templates

--- a/user_reg_proj_root/templates/userapp/contact.html
+++ b/user_reg_proj_root/templates/userapp/contact.html
@@ -42,7 +42,7 @@
           <div class="card p-4">
             <div class="card-body">
               <h4>Get In Touch With Us</h4>
-              <p>Naveen Kumar Dubba is an IT Finishing School located Cochin, focused on providing advanced level
+              <p>Naveen | Harshika is an IT Finishing School located Cochin, focused on providing advanced level
                 software training to Students and by helping them to get placed.</p>
               <h4>Address</h4>
               <p>3rd Floor, Vallamattam Estate Seaport - Airport Rd CSEZ P O, Kakkanad</p>
