--- a/user_reg_proj_root/templates/partial/_footer.html
+++ b/user_reg_proj_root/templates/partial/_footer.html
@@ -3,7 +3,10 @@
     <div class="row">
       <div class="col">
         <p>Copyright &copy;
-          <span id="year">2022</span>&nbsp;Naveen Kumar Dubba
+          <span id="year">2022</span>&nbsp;Naveen | Harshika -
+          <a href="/admin">
+            Admin
+          </a>
         </p>
       </div>
     </div>
