--- a/user_reg_proj_root/templates/partial/_navbarhr.html
+++ b/user_reg_proj_root/templates/partial/_navbarhr.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container">
-    <a href="{% url 'index_page' %}" class="navbar-brand">Naveen Kumar Dubba</a>
+    <a href="{% url 'index_page' %}" class="navbar-brand">Naveen | Harshika</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
     </button>
