--- a/user_reg_proj_root/templates/userapp/about.html
+++ b/user_reg_proj_root/templates/userapp/about.html
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year">2022</span>&nbsp;Naveen Kumar Dubba
+            <span id="year">2022</span>&nbsp;Naveen | Harshika
           </p>
         </div>
       </div>
