--- a/user_reg_proj_root/templates/userapp/index.html
+++ b/user_reg_proj_root/templates/userapp/index.html
@@ -38,7 +38,7 @@
   <footer id="main-footer" class="py-4 bg-dark text-white text-center">
     Copyright &copy;
     <span class="year">2022</span>
-    Naveen Kumar Dubba
+    Naveen | Harshika
   </footer>
 
 
